# async-payments-service

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/http/: dependency.py  error_handlers.py
app/api/routes/: payments.py  stripe_webhooks.py
app/api/schemas/: payments.py
app/config/: settings.py
app/core/: idempotency.py
app/db/: base.py  sessions.py
app/db/models/: payment.py
app/domain/payments/: enums.py  state_machine.py
app/infrastructure/stripe/: client.py
app/repositories/payments/: payment_repo.py  stripe_event_repo.py
app/services/payments/: payment_service.py  refund_service.py  stripe_gateway.py  webhooks_service.py
