[project]
name = "async-payments-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshit",email = "workwithvrz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "async-payments-service"
version = "0.1.0"
description = ""
authors = ["Your Name"]
package-mode = false